tdf#111939: Fallback to getting view data from best view shell...

...when ScDocShell::GetViewData() returns nullptr. This is needed
when a macro is run from the macro editor window instead of running
the macro from Tools menu in the Calc window.

Change-Id: I89c23c2ec08e8e9907f02eb1389236111530058b
Reviewed-on: https://gerrit.libreoffice.org/41733
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Dennis Francis <dennis.francis@collabora.co.uk>
(cherry picked from commit c864fc9eab79d0b24036588cf8fc37ef51bd1907)
Reviewed-on: https://gerrit.libreoffice.org/41757
Reviewed-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit 980fbcaf9de67013b1e72806de7746543040d48e)
Signed-off-by: Andras Timar <andras.timar@collabora.com>